# cerebro-code-memory

./: .gitignore  CLAUDE.md  LICENSE  README.md  USAGE.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: cerebro-architect.md  cerebro-explorer.md  cerebro-impact-analyst.md  cerebro-implementer.md  cerebro-memory-keeper.md
plugin/hooks/: cerebro-first.py  cerebro-mark-used.py  cerebro-session-end.py  hooks.json  post_edit.py  session_start.py  verify-edit.py
plugin/skills/cerebro/: SKILL.md
src/cerebro/: __init__.py  apiroutes.py  callgraph.py  cli.py  config.py  db.py  docaudit.py  embeddings.py  gitsync.py  graph.py  indexer.py  insights.py  notes.py  server.py  summaries.py  summarizer.py  tsconfig.py  views.py  viz.py
tests/: conftest.py  test_apiroutes.py  test_callgraph.py  test_cli.py  test_db.py  test_docaudit.py  test_embeddings.py  test_gitsync.py  test_indexer.py  test_insights.py  test_notes.py  test_server.py  test_session_end_hook.py  test_summarizer.py  test_symbol_staleness.py  test_tsconfig.py  test_viz.py
